Add a-Si results

--- a/slide.tex
+++ b/slide.tex
@@ -281,6 +281,29 @@
   \end{figure}
 \end{frame}
 
+\begin{frame}{Generation of Amorphous Silicon}
+  Trained with a-Si simulated with different thermal histories and perform generation.
+  \vspace{-0.5em}
+  \begin{figure}
+    \centering
+    \begin{subfigure}{0.47\textwidth}
+      \centering
+      \includegraphics[width=\linewidth]{figures/Si-opt-rdf.pdf}
+      \vspace{-2.5em}
+      \caption{RDF of training (solid) vs. generated (dashed) samples}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.47\textwidth}
+      \centering
+      \includegraphics[width=\linewidth]{figures/Si-opt-energy.pdf}
+      \vspace{-2.5em}
+      \caption{Potential energy distribution of training vs. generated samples}
+    \end{subfigure}
+  \end{figure}
+  \vspace{-1.5em}
+  This further demonstrates that the model is unable to generate low-energy structures derived from relaxation processes.
+\end{frame}
+
 \begin{frame}{Limitations}
   \begin{block}{Real-world synthesis of generated samples}
     New synthesis techniques are needed to fully take advantage of the generated atomic configurations.
