--- a/slide.tex
+++ b/slide.tex
@@ -57,7 +57,15 @@
   \vspace*{-0.6cm}
   \begin{figure}[htpb]
     \begin{center}
-      \includegraphics[keepaspectratio, scale=0.5]{aau-logo-left-uk.pdf}
+      \begin{minipage}{0.4\textwidth}
+        \raggedleft
+        \includegraphics[keepaspectratio, height=.8cm]{aau-logo-left-uk.pdf}
+      \end{minipage}
+      \hspace{.4cm}
+      \begin{minipage}{0.4\textwidth}
+        \raggedright
+        \includegraphics[keepaspectratio, height=.8cm]{figures/vf.png}
+      \end{minipage}
     \end{center}
   \end{figure}
 \end{frame}
