--- a/slide.tex
+++ b/slide.tex
@@ -342,7 +342,7 @@
 
   \vspace{1em}
   \centering
-  \emphasis{\textbf{Further discussion and solutions: stay tuned for the next session!}}
+  \emphasis{\textbf{Further discussion and solutions: stay tuned for the next presentation!}}
 \end{frame}
 
 
