--- a/AAU.sty
+++ b/AAU.sty
@@ -31,7 +31,7 @@
     \usebeamerfont{title in head/foot}\insertshorttitle
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.3\paperwidth,ht=2.25ex,dp=1ex,right]{section in foot}%
-    \today \hspace*{12ex} \insertframenumber{} / \inserttotalframenumber\hspace*{2ex} 
+    Augest 10, 2025 \hspace*{12ex} \insertframenumber{} / \inserttotalframenumber\hspace*{2ex} 
   \end{beamercolorbox}}%
   \vskip0pt%
 }
