--- a/slide.tex
+++ b/slide.tex
@@ -1,5 +1,6 @@
-\documentclass[serif, aspectratio=169]{beamer}
+\documentclass[aspectratio=169]{beamer}
 \usepackage[T1]{fontenc} 
+\usepackage[default]{sourcesanspro}
 \usepackage{fourier}
 \usepackage{hyperref}
 \usepackage{latexsym,amsmath,xcolor,multicol,booktabs,calligra}
@@ -21,7 +22,7 @@
   \href{https://www.en.tech.aau.dk/research/research-groups/data-engineering-science-og-systems-dess}{Department of Computer Science} \\
   \href{https://www.en.aau.dk/}{Aalborg University} \\
 }
-\date{\small \today}
+\date{\small Augest 10, 2025}
 \usepackage{AAU}
 
 % Remove navigation buttons
