--- a/slide.tex
+++ b/slide.tex
@@ -53,7 +53,7 @@
 %- --- --- --- --- --- --- --- --- --- --- --- --- --- --- --- 
 \begin{document}
 
-\begin{frame}
+\begin{frame}[plain,noframenumbering]
   \titlepage
   \vspace*{-0.6cm}
   \begin{figure}[htpb]
@@ -347,7 +347,9 @@
 \end{frame}
 
 
-\begin{frame}
+\appendix
+
+\begin{frame}[plain,noframenumbering]
   \begin{center}
     {\large Thank you!}
     \vspace{1cm}
